--- a/index.html
+++ b/index.html
@@ -11,10 +11,158 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
-    
+    <header>
+        <div class="logo-titulo">
+            <img src="imgs/Logo.png"/>
+        </div>
+    </header>
+
+    <main>
+        <section class="menu">
+            <div class="escolhas">
+                <div class="escolha">
+                    <p>Escolha o modelo</p>
+                    <div class="opcoes">
+                        <div class="opcao">
+                            <div class="icone">
+                                <img src="imgs/tshirt.png"/>
+                            </div>
+                            <p>T-shirt</p>
+                        </div>
+
+                        <div class="opcao">
+                            <div class="icone">
+                                <img src="imgs/Camiseta.png"/>
+                            </div>
+                            <p>Camiseta</p>
+                        </div>
+
+                        <div class="opcao">
+                            <div class="icone">
+                                <img src="imgs/Mangalonga.png"/>
+                            </div>
+                            <p>Manga longa</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="escolha">
+                    <p>Escolha a gola</p>
+                    <div class="opcoes">
+                        <div class="opcao">
+                            <div class="icone">
+                                <img src="imgs/GolaV.png"/>
+                            </div>
+                            <p>Gola V</p>
+                        </div>
+
+                        <div class="opcao">
+                            <div class="icone">
+                                <img src="imgs/GolaRedonda.png"/>
+                            </div>
+                            <p>Gola Redonda</p>
+                        </div>
+
+                        <div class="opcao">
+                            <div class="icone">
+                                <img src="imgs/GolaPolo.png"/>
+                            </div>
+                            <p>Gola polo</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="escolha">
+                    <p>Escolha o tecido</p>
+                    <div class="opcoes">
+                        <div class="opcao">
+                            <div class="icone">
+                                <img src="imgs/Seda.png"/>
+                            </div>
+                            <p>Seda</p>
+                        </div>
+
+                        <div class="opcao">
+                            <div class="icone">
+                                <img src="imgs/Algodão.png"/>
+                            </div>
+                            <p>Algodão</p>
+                        </div>
+
+                        <div class="opcao">
+                            <div class="icone">
+                                <img src="imgs/Poliester.png"/>
+                            </div>
+                            <p>Poliéster</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="escolha">
+                    <p>Imagem de referência</p>
+                    <div class="opcoes">
+                        <div class="opcao">
+                            <input placeholder="Insira o link">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="escolha">
+                    <button>Confirmar pedido</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="imagem">
+            <img src="imgs/ilustração.png"/>
+        </section>
+    </main>
+
+    <footer>
+        <div class="ultimos-pedidos">
+            <h3>Ultimos pedidos</h3>
+            <div class="showroom">
+                <div class="pedido">
+                    <div class="caixa">
+                        <img src="imgs/Blusa1.png"/>
+                    </div>
+                    <p><span>Criador:</span> Agata</p>
+                </div>
+
+                <div class="pedido">
+                    <div class="caixa">
+                        <img src="imgs/Blusa2.png"/>
+                    </div>
+                    <p><span>Criador:</span> Bruna</p>
+                </div>
+
+                <div class="pedido">
+                    <div class="caixa">
+                        <img src="imgs/Blusa3.png"/>
+                    </div>
+                    <p><span>Criador:</span> Camila</p>
+                </div>
+
+                <div class="pedido">
+                    <div class="caixa">
+                        <img src="imgs/Blusa4.png"/>
+                    </div>
+                    <p><span>Criador:</span> Daniel</p>
+                </div>
+
+                <div class="pedido">
+                    <div class="caixa">
+                        <img src="imgs/Blusa5.png"/>
+                    </div>
+                    <p><span>Criador:</span> Ester</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
 </body>
