--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
                     <p>Escolha o modelo</p>
                     <div class="opcoes">
                         <div class="opcao">
-                            <div class="icone" onclick="selecionarItem1(this)">
+                            <div class="icone" id="t-shirt" onclick="selecionarItem1(this)">
                                 <img src="imgs/tshirt.png"/>
                             </div>
                             <p>T-shirt</p>
                         </div>
 
                         <div class="opcao">
-                            <div class="icone" onclick="selecionarItem1(this)">
+                            <div class="icone" id="top-tank" onclick="selecionarItem1(this)">
                                 <img src="imgs/Camiseta.png"/>
                             </div>
                             <p>Camiseta</p>
                         </div>
 
                         <div class="opcao">
-                            <div class="icone" onclick="selecionarItem1(this)">
+                            <div class="icone" id="long" onclick="selecionarItem1(this)">
                                 <img src="imgs/Mangalonga.png"/>
                             </div>
                             <p>Manga longa</p>
@@ -53,21 +53,21 @@
                     <p>Escolha a gola</p>
                     <div class="opcoes">
                         <div class="opcao">
-                            <div class="icone" onclick="selecionarItem2(this)">
+                            <div class="icone" id="v-neck" onclick="selecionarItem2(this)">
                                 <img src="imgs/GolaV.png"/>
                             </div>
                             <p>Gola V</p>
                         </div>
 
                         <div class="opcao">
-                            <div class="icone" onclick="selecionarItem2(this)">
+                            <div class="icone" id="round" onclick="selecionarItem2(this)">
                                 <img src="imgs/GolaRedonda.png"/>
                             </div>
                             <p>Gola Redonda</p>
                         </div>
 
                         <div class="opcao">
-                            <div class="icone" onclick="selecionarItem2(this)">
+                            <div class="icone" id="polo" onclick="selecionarItem2(this)">
                                 <img src="imgs/GolaPolo.png"/>
                             </div>
                             <p>Gola polo</p>
@@ -79,21 +79,21 @@
                     <p>Escolha o tecido</p>
                     <div class="opcoes">
                         <div class="opcao">
-                            <div class="icone" onclick="selecionarItem3(this)">
+                            <div class="icone" id="silk" onclick="selecionarItem3(this)">
                                 <img src="imgs/Seda.png"/>
                             </div>
                             <p>Seda</p>
                         </div>
 
                         <div class="opcao">
-                            <div class="icone" onclick="selecionarItem3(this)">
+                            <div class="icone" id="cotton" onclick="selecionarItem3(this)">
                                 <img src="imgs/Algodão.png"/>
                             </div>
                             <p>Algodão</p>
                         </div>
 
                         <div class="opcao">
-                            <div class="icone" onclick="selecionarItem3(this)">
+                            <div class="icone" id="polyester" onclick="selecionarItem3(this)">
                                 <img src="imgs/Poliester.png"/>
                             </div>
                             <p>Poliéster</p>
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="escolha">
-                    <button class="" onclick="">Confirmar pedido</button>
+                    <button class="" onclick="confirmar()">Confirmar pedido</button>
                 </div>
             </div>
         </section>
